<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/action_bar"
        layout="@layout/main_actionbar" />

    <LinearLayout
        android:id="@+id/edt_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/action_bar"
        android:orientation="vertical">

        <EditText
            android:id="@+id/post_title_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@android:color/white"
            android:hint="加个标题哟~"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorCardBtnTextSelected"
            android:textCursorDrawable="@drawable/text_cursor"
            android:textSize="20sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/post_content_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@android:color/white"
            android:focusable="true"
            android:gravity="top"
            android:hint="@string/post_content_hint"
            android:minLines="3"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorCardBtnTextSelected"
            android:textCursorDrawable="@drawable/text_cursor"
            android:textSize="18sp" />

    </LinearLayout>


    <ImageView
        android:id="@+id/post_add_image_iv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/edt_container"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/post_image_add_selector" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@id/bottom_line">

        <TextView
            android:id="@+id/post_add_title_tv"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:background="@drawable/post_bottom_tv_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/post_add_title"
            android:textColor="@color/colorTextOther"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/post_all_meet_tv"
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/post_bottom_tv_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/post_all_meet"
            android:textColor="@color/colorTextOther"
            android:textSize="12sp" />
    </RelativeLayout>

    <View
        android:id="@+id/bottom_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@id/tools_container"
        android:background="@color/colorDivider" />

    <LinearLayout
        android:id="@+id/tools_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/post_bottom_tools" />
    </LinearLayout>

</RelativeLayout>